58-assn-jpa-customer-operations